# scheduler_server

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  activity.json  coverage.sh  docker-compose-dev.yml  docker-compose-e2e.yml  docker-compose-large-tests.yml  docker-compose-perf-no100k.yml  docker-compose-perf.yml  docker-compose.test.yml  docker-compose.yml  setup.toml
.github/: docker.yml
.github/workflows/: ci.yml  docker.yml
db/: init.sql
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
integration-tests/: .env  Cargo.toml  Makefile  logfile
integration-tests/src/: main.rs
integration-tests/test_cluster/: log  postgresql.conf  postmaster.opts  postmaster.pid
integration-tests/test_cluster/base/1/: 1247_vm  1249  1249_vm  1255  1259  1259_vm  13442_vm  13446  13449  13452_vm  13456  2579  2601_vm  2602_vm  2605_vm  2607_vm  2608  2609  2609_vm  2610  2610_vm  2612  2615  2616_vm  2618_vm  2619  2619_vm  2658  2659  2662  2664  2665  2666  2675  2681  2682  2685  2690  2691  2692  (+25 more)
integration-tests/test_cluster/base/16388/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13444  13444_fsm  13444_vm  13449  13449_fsm  13449_vm  13454  13454_fsm  13454_vm  13458  13459  13459_fsm  13459_vm  13463  16389  16394  16395  16397  16407  16420  16429  16437  16443  16445  16446  16449  (+206 more)
integration-tests/test_cluster/base/16501/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13442  13442_fsm  13442_vm  13446  13447  13447_fsm  13447_vm  13451  13452  13452_fsm  13452_vm  13456  13457  13457_fsm  13457_vm  13461  16502  16507  16508  16510  16520  16533  16542  16934  16936  16937  (+219 more)
integration-tests/test_cluster/base/4/: 1247_vm  1255_vm  1259  13444  13447_vm  13453  13457_vm  13461  13463  2579  2600_vm  2602_vm  2603_vm  2605_vm  2606  2607_vm  2608  2608_vm  2609_vm  2612  2615  2615_vm  2617_vm  2618  2619  2619_vm  2659  2662  2663  2664  2665  2673  2674  2675  2682  2684  2685  2690  2691  2693  (+23 more)
integration-tests/test_cluster/base/5/: 1247  1249_vm  1255  1255_vm  1259  1259_vm  13442  13444_vm  13447  13449_vm  13451  13452  13454  13457  13458  13459  2600_vm  2603_vm  2606_vm  2609  2610_vm  2612_vm  2615  2615_vm  2617_vm  2618_vm  2619_vm  2658  2666  2667  2673  2678  2679  2684  2692  2696  2753_vm  2836_vm  2838  2838_vm  (+17 more)
integration-tests/test_cluster/global/: 1213_vm  1214  1232  1233  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  2677  pg_control  pg_internal.init
integration-tests/test_cluster/pg_stat/: pgstat.stat
integration-tests/test_cluster/pg_xact/: 0000
migrations/: 20231224203537_activities_table.down.sql  20231224203537_activities_table.up.sql  20231224203558_time_spent_table.down.sql  20231224203558_time_spent_table.up.sql  20231226092817_create_accounts_table.up.sql  20231226194208_extend_activities_table.down.sql  20231226194208_extend_activities_table.up.sql  20231226194208_extend_time_spent_table.down.sql  20231231050044_extend_time_spent_table.up.sql  20240327064957_time_spent_table.down.sql  20240327064957_time_spent_table.up.sql
src/: cache.rs  config.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs  store.rs  swagger.rs
src/routes/: activities.rs  authentication.rs  health.rs  mod.rs  time_spent.rs  timer.rs
src/tests/: helpers.rs
src/types/: account.rs  activities.rs  mod.rs  pagination.rs  time_spent.rs
tests/: add_activities.rest  add_timespent.rest  delete_timespent.rest  get_activities.rest  get_timespent.rest  login.rest  registration.rest  update_activities.rest
tests/api-tests/: conftest.py  pyproject.toml
tests/api-tests/scheduler_server/: __init__.py
tests/api-tests/tests/: test_primitives.py  test_user_flow.py  test_user_flows.py
tests/api-tests/utils/: helpers.py
tests/api-tests/utils/objects/: activity.py  auth.py  base.py  base_class.py  client.py  types.py
tests/e2e/: critical_path.hurl  docker-compose.yml  e2e-regression.postman_collection.json  negative_cases.hurl  package-lock.json  package.json  test_runner.sh  vars.env
tests/e2e/report/: newman-run-report-2024-03-20-07-24-47-251-0.xml  newman-run-report-2024-03-20-07-26-24-061-0.xml  newman-run-report-2024-03-20-07-29-27-432-0.xml  newman-run-report-2024-03-20-07-31-20-918-0.xml  newman-run-report-2024-03-20-07-32-46-873-0.xml  newman-run-report-2024-03-20-07-39-21-274-0.xml
tests/performance/: docker-compose.yml  get_activities.js  perf_test.js  utils.js
tests/vim-query-example/: add_activities.rest  add_timespent.rest  delete_activities.rest  delete_timespent.rest  get_timespent.rest  login.rest  update_activities.rest
