[package]
name = "activities-scheduler-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
warp = { version = "0.3.6" }
# data serilization library
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.108"
h2 = { version = "^0.4.3" }

# uuid 
uuid = { version = "1.8.0", features = ["v4"] }

# tracing
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# local
handle-errors = { path = "handle-errors" }

# config
clap = { version = "4.5.4", features = ["derive"] }
config = { version = "0.14.0", features = ["toml"] }

# db
sqlx = { version = "0.7.4", features = [
  "runtime-tokio-rustls",
  "migrate",
  "postgres",
] }

# random
rand = { version = "0.8.5" }

# encryption
rust-argon2 = { version = "2.1.0" }
paseto = { version = "2.0.2" }
openssl-sys = "0.9.101"

# time 
chrono = { version = "0.4.35" }
