[package]
name = "activities-scheduler-server"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...' # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
warp = { version = "0.3.7" }
# data serilization library
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
h2 = { version = "^0.4.4" }

# uuid 
uuid = { version = "1.8.0", features = ["v4"] }

# tracing
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# local
handle-errors = { path = "handle-errors" }

# config
clap = { version = "4.5.4", features = ["derive"] }
proc-macro2 = "1.0.79"
dotenv = { version = "0.15.0" }

# db
sqlx = { version = "0.7.4", features = [
  "runtime-tokio-rustls",
  "migrate",
  "postgres",
] }

# random
rand = { version = "0.8.5" }

# encryption
rust-argon2 = { version = "2.1.0" }
paseto = { version = "2.0.2" }
openssl-sys = "0.9.102"
openssl = { version = "0.10.64", features = ["vendored"] }

# time 
chrono = { version = "0.4.37" }
