[package]
name = "handle-errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
sqlx = { version = "0.7.3" }
tracing = { version = "0.1.40", features = ["log"] }
rust-argon2 = { version = "2.0.0" }
