[package]
name = "handle-errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
tokio = { version = "1.44.1", features = ["full"] }
sqlx = { version = "0.8.3" }
tracing = { version = "0.1.41", features = ["log"] }
rust-argon2 = { version = "2.1.0" }
