[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
activities-scheduler-server = { path = "../", version = "0.1.0" }
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
futures-util = "0.3.30"
