[tool.poetry]
name = "api-tests"
version = "0.1.0"
description = "This framework for api tests, write for qaroom course"
authors = ["b1gslick <bigslick1106@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
pydantic = "^2.11.9"
pytest = "^8.4.2"
testcontainers = "^4.13.1"
redis = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(filename)s:%(lineno)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
