[tool.poetry]
name = "api-tests"
version = "0.1.0"
description = "python framework for API testing"
authors = ["b1gslick <bigslick1106@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
pytest = "^8.4.2"
pydantic = "^2.11.9"
testcontainers = "^4.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
